--- a/style.scss
+++ b/style.scss
@@ -619,3 +619,11 @@ input:checked + .slider:before {
         height: 100px;
     }
 }
+
+#load-more-influencers {
+    border-color: var(--e-global-color-primary);
+    font-family: Inter, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+}
