--- a/style.scss
+++ b/style.scss
@@ -626,4 +626,5 @@ input:checked + .slider:before {
     font-size: 14px;
     font-weight: 500;
     text-transform: uppercase;
+    cursor: pointer;
 }
