--- a/style.css
+++ b/style.css
@@ -481,4 +481,7 @@ input:checked + .slider:before {
     left: 0;
     width: 100%; }
 
+.load-more-wrapper {
+  text-align: center; }
+
 /*# sourceMappingURL=style.css.map */
