--- a/style.scss
+++ b/style.scss
@@ -631,10 +631,11 @@ input:checked + .slider:before {
 
 
 .influencer-grid-box {
-    padding-bottom: 140px;
+    padding-bottom: 120px;
+    position: relative;
     .loading-animation {
         position: absolute;
-        bottom: 0;
+        bottom: 5px;
         left: 0;
         width: 100%;
     }
