--- a/style.scss
+++ b/style.scss
@@ -614,6 +614,8 @@ input:checked + .slider:before {
 
 .loading-animation {
     text-align: center;
+    margin-top: 20px;
+
     img {
         width: 100px;
         height: 100px;
