--- a/style.css
+++ b/style.css
@@ -460,7 +460,8 @@ input:checked + .slider:before {
   hyphens: auto; }
 
 .loading-animation {
-  text-align: center; }
+  text-align: center;
+  margin-top: 20px; }
   .loading-animation img {
     width: 100px;
     height: 100px; }
