--- a/style.css
+++ b/style.css
@@ -478,4 +478,8 @@ input:checked + .slider:before {
   text-align: center;
   margin-top: 20px; }
 
+.dropdown-search-input {
+  font-family: Inter, sans-serif;
+  font-size: 14px; }
+
 /*# sourceMappingURL=style.css.map */
