--- a/style.scss
+++ b/style.scss
@@ -631,8 +631,12 @@ input:checked + .slider:before {
     cursor: pointer;
 }
 
-
 .load-more-wrapper {
     text-align: center;
     margin-top: 20px;
+}
+
+.dropdown-search-input {
+    font-family: Inter, sans-serif;
+    font-size: 14px;
 }
