--- a/style.scss
+++ b/style.scss
@@ -636,7 +636,7 @@ input:checked + .slider:before {
     margin-top: 20px;
 }
 
-.dropdown-search-input.dropdown-search-input.dropdown-search-input {
+.dropdown-search-input.dropdown-search-input.dropdown-search-input.dropdown-search-input.dropdown-search-input {
     font-family: Inter, sans-serif;
     font-size: 14px;
 }
