--- a/style.css
+++ b/style.css
@@ -478,7 +478,7 @@ input:checked + .slider:before {
   text-align: center;
   margin-top: 20px; }
 
-.dropdown-search-input.dropdown-search-input.dropdown-search-input {
+.dropdown-search-input.dropdown-search-input.dropdown-search-input.dropdown-search-input.dropdown-search-input {
   font-family: Inter, sans-serif;
   font-size: 14px; }
 
