--- a/style.scss
+++ b/style.scss
@@ -639,4 +639,5 @@ input:checked + .slider:before {
 .dropdown-search-input.dropdown-search-input.dropdown-search-input.dropdown-search-input.dropdown-search-input {
     font-family: Inter, sans-serif;
     font-size: 14px;
+        color: #000;
 }
