--- a/style.css
+++ b/style.css
@@ -480,6 +480,7 @@ input:checked + .slider:before {
 
 .dropdown-search-input.dropdown-search-input.dropdown-search-input.dropdown-search-input.dropdown-search-input {
   font-family: Inter, sans-serif;
-  font-size: 14px; }
+  font-size: 14px;
+  color: #000; }
 
 /*# sourceMappingURL=style.css.map */
