--- a/style.css
+++ b/style.css
@@ -492,17 +492,18 @@ input:checked + .slider:before {
 .cad-trigger {
   display: flex;
   align-items: center;
-  gap: 8px; }
+  gap: 8px;
+  border: 3px solid #9ab3b5;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  transition: border-color 0.3s ease; }
   .cad-trigger .cad-avatar {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    object-fit: cover;
-    border: 3px solid #bce0e2;
-    transition: border-color 0.3s ease; }
-
-.cad-wrapper:hover .cad-avatar {
-  border-color: #333; }
+    width: 100%;
+    height: 100%;
+    object-fit: cover; }
+  .cad-trigger:hover {
+    border-color: #000; }
 
 .cad-dropdown {
   display: none;
