--- a/style.scss
+++ b/style.scss
@@ -652,25 +652,27 @@ input:checked + .slider:before {
 .cad-trigger {
     display: flex;
     align-items: center;
-    gap: 8px; 
-    .cad-avatar {
-        width: 50px; 
-        height: 50px;
-        border-radius: 50%;
-        object-fit: cover;
-        border: 3px solid #bce0e2; 
-        transition: border-color 0.3s ease;
-    }
-}
+    gap: 8px;
+    border: 3px solid #9ab3b5;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    transition: border-color 0.3s ease;
 
-.cad-wrapper:hover .cad-avatar {
-    border-color: #333; 
+    .cad-avatar {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+    &:hover {
+        border-color: #000;
+    }
 }
 
 .cad-dropdown {
     display: none;
     position: absolute;
-    top: 120%; 
+    top: 120%;
     right: 0;
     width: 200px;
     background: #ffffff;
