--- a/style.css
+++ b/style.css
@@ -492,16 +492,18 @@ input:checked + .slider:before {
 .cad-trigger {
   display: flex;
   align-items: center;
-  gap: 8px;
-  border: 3px solid #9ab3b5;
-  border-radius: 50%;
-  width: 50px;
-  height: 50px;
-  transition: border-color 0.3s ease; }
-  .cad-trigger .cad-avatar {
-    width: 100%;
-    height: 100%;
-    object-fit: cover; }
+  gap: 8px; }
+  .cad-trigger .cad-avatar-wrapper {
+    border: 3px solid #9ab3b5;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    transition: border-color 0.3s ease;
+    overflow: hidden; }
+    .cad-trigger .cad-avatar-wrapper .cad-avatar {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
   .cad-trigger:hover {
     border-color: #000; }
 
