--- a/style.scss
+++ b/style.scss
@@ -653,17 +653,21 @@ input:checked + .slider:before {
     display: flex;
     align-items: center;
     gap: 8px;
-    border: 3px solid #9ab3b5;
-    border-radius: 50%;
-    width: 50px;
-    height: 50px;
-    transition: border-color 0.3s ease;
 
-    .cad-avatar {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+    .cad-avatar-wrapper {
+        border: 3px solid #9ab3b5;
+        border-radius: 50%;
+        width: 50px;
+        height: 50px;
+        transition: border-color 0.3s ease;
+        overflow: hidden;
+        .cad-avatar {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
     }
+
     &:hover {
         border-color: #000;
     }
