--- a/style.css
+++ b/style.css
@@ -554,4 +554,17 @@ input:checked + .slider:before {
     height: calc(100vh - var(--admin-bar-height, 0) - 133px);
     max-height: calc(100vh - var(--admin-bar-height, 0) - 133px); }
 
+#influencer-discovery-sidebar .e-n-menu-title-text {
+  position: relative; }
+
+#influencer-discovery-sidebar .e-n-menu-title-text:after {
+  content: "";
+  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" width="46.322" height="46.948" viewBox="0 0 46.322 46.948"><path id="sparkers" d="M15.96,24.3a.809.809,0,0,0,.851-.751c.9-6.685,1.127-6.685,8.038-8.012a.847.847,0,0,0,.776-.851.864.864,0,0,0-.776-.851c-6.911-.951-7.161-1.177-8.038-7.987a.84.84,0,0,0-1.678.025c-.826,6.71-1.177,6.685-8.037,7.962a.884.884,0,0,0-.776.851c0,.5.326.776.876.851,6.811,1.1,7.111,1.277,7.937,7.962A.811.811,0,0,0,15.96,24.3ZM32.937,52.02a1.289,1.289,0,0,0,1.252-1.152c1.778-13.721,3.706-15.8,17.277-17.3a1.256,1.256,0,0,0,1.177-1.252,1.274,1.274,0,0,0-1.177-1.252c-13.571-1.5-15.5-3.581-17.277-17.3a1.266,1.266,0,0,0-1.252-1.127,1.225,1.225,0,0,0-1.227,1.127c-1.778,13.721-3.731,15.8-17.277,17.3a1.277,1.277,0,0,0-1.2,1.252,1.26,1.26,0,0,0,1.2,1.252c13.521,1.778,15.4,3.606,17.277,17.3A1.248,1.248,0,0,0,32.937,52.02Z" transform="translate(-6.32 -5.073)" fill="%23ffe17b"/></svg>');
+  width: 17px;
+  height: 17px;
+  position: absolute;
+  right: -20px;
+  background-size: contain;
+  top: -5px; }
+
 /*# sourceMappingURL=style.css.map */
