--- a/style.css
+++ b/style.css
@@ -567,4 +567,7 @@ input:checked + .slider:before {
   background-size: contain;
   top: -5px; }
 
+.link-black a {
+  color: #000 !important; }
+
 /*# sourceMappingURL=style.css.map */
