--- a/style.scss
+++ b/style.scss
@@ -743,3 +743,7 @@ input:checked + .slider:before {
 .link-black a {
     color: #000 !important;
 }
+
+.elementor-icon-wrapper {
+    display: flex;
+}
