--- a/style.css
+++ b/style.css
@@ -570,4 +570,7 @@ input:checked + .slider:before {
 .link-black a {
   color: #000 !important; }
 
+.elementor-icon-wrapper {
+  display: flex; }
+
 /*# sourceMappingURL=style.css.map */
