--- a/style.css
+++ b/style.css
@@ -570,7 +570,7 @@ input:checked + .slider:before {
 .link-black a {
   color: #000 !important; }
 
-.elementor-icon-wrapper {
+.elementor-icon-wrapper.elementor-icon-wrapper.elementor-icon-wrapper {
   display: flex; }
 
 /*# sourceMappingURL=style.css.map */
