--- a/style.scss
+++ b/style.scss
@@ -744,6 +744,6 @@ input:checked + .slider:before {
     color: #000 !important;
 }
 
-.elementor-icon-wrapper {
+.elementor-icon-wrapper.elementor-icon-wrapper.elementor-icon-wrapper {
     display: flex;
 }
