--- a/style.scss
+++ b/style.scss
@@ -77,7 +77,7 @@ $font-stack: "Inter", Tahoma, Geneva, Verdana, sans-serif;
 // Colors (extracted for easy theming)
 $bg-body: #f0f2f5;
 $bg-widget: #e5e7eb;
-$bg-input: #f3f4f6;
+$bg-input: #FFFFFF;
 $bg-white: #ffffff;
 $bg-tag: #d1fae5;
 
