--- a/style.scss
+++ b/style.scss
@@ -81,7 +81,7 @@ $bg-input: #FFFFFF;
 $bg-white: #ffffff;
 $bg-tag: #d1fae5;
 
-$border-color: #d1d5db;
+$border-color: #BCBCBC;
 $border-hover: #9ca3af;
 $border-tag: #0f766e;
 
