--- a/style.scss
+++ b/style.scss
@@ -54,7 +54,7 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     }
 }
 
-.meta-country-wrapper {
+.meta-country-wrapper.meta-country-wrapper {
     display: flex;
     align-items: center;
     gap: 5px;
