--- a/style.css
+++ b/style.css
@@ -36,7 +36,12 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
     color: #898989;
     display: flex;
     align-items: center;
-    justify-content: center; }
+    justify-content: center;
+    cursor: pointer; }
+
+.disable-niche-click .niche-toggle {
+  pointer-events: none;
+  cursor: text; }
 
 .is-verified .influencer-name .elementor-heading-title:after {
   margin-left: 10px;
