--- a/style.scss
+++ b/style.scss
@@ -40,7 +40,12 @@ Tags: flexible-header, custom-colors, custom-menu, custom-logo, editor-style, fe
         display: flex;
         align-items: center;
         justify-content: center;
+        cursor: pointer;
     }
+}
+.disable-niche-click  .niche-toggle {
+    pointer-events: none;
+    cursor: text;
 }
 
 .is-verified {
