--- a/style.css
+++ b/style.css
@@ -590,9 +590,10 @@ input:checked + .slider:before {
   align-items: center;
   gap: 30px;
   /* Space between chart and legend */
-  font-family: sans-serif;
   max-width: 500px;
-  /* Adjust as needed */ }
+  /* Adjust as needed */
+  font-size: 14px;
+  font-weight: 500; }
 
 /* Make chart responsive but limited in size */
 .chart-container {
