--- a/style.css
+++ b/style.css
@@ -593,7 +593,8 @@ input:checked + .slider:before {
   max-width: 500px;
   /* Adjust as needed */
   font-size: 14px;
-  font-weight: 500; }
+  font-weight: 500;
+  color: var(--e-global-color-2ba2932); }
 
 /* Make chart responsive but limited in size */
 .chart-container {
