--- a/style.scss
+++ b/style.scss
@@ -780,12 +780,27 @@ input:checked + .slider:before {
     display: flex;
     flex-direction: column;
     gap: 12px; /* Space between rows */
-}
-
-.legend-item {
-    display: flex;
-    align-items: center;
-    gap: 10px;
+    flex-grow: 1;
+    .legend-item {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        &:nth-child(1) {
+            .legend-label {
+                width: 90%;
+            }
+        }
+        &:nth-child(2) {
+            .legend-label {
+                width: 85%;
+            }
+        }
+        &:nth-child(3) {
+            .legend-label {
+                width: 80%;
+            }
+        }
+    }
 }
 
 /* The colored pill shape */
