--- a/style.scss
+++ b/style.scss
@@ -767,6 +767,7 @@ input:checked + .slider:before {
     max-width: 500px; /* Adjust as needed */
     font-size: 14px;
     font-weight: 500;
+    flex-wrap: wrap;
 }
 
 /* Make chart responsive but limited in size */
@@ -780,37 +781,17 @@ input:checked + .slider:before {
     display: flex;
     flex-direction: column;
     gap: 12px; /* Space between rows */
-    flex-grow: 1;
-    .legend-item {
-        display: flex;
-        align-items: center;
-        gap: 10px;
-        &:nth-child(1) {
-            .legend-label {
-                width: 90%;
-            }
-        }
-        &:nth-child(2) {
-            .legend-label {
-                width: 85%;
-            }
-        }
-        &:nth-child(3) {
-            .legend-label {
-                width: 80%;
-            }
-        }
-    }
 }
+
+
 
 /* The colored pill shape */
 .legend-label {
-    padding: 6px 16px;
+    padding: 8px 20px;
     border-radius: 20px; /* Makes it a pill */
     font-size: 14px;
     font-weight: 500;
     color: var(--e-global-color-2ba2932);
-    min-width: 100px; /* Ensures alignment */
     text-align: center;
     &[style="background-color: #FFE17B;"] {
         color: var(--e-global-color-secondary);
