--- a/style.scss
+++ b/style.scss
@@ -564,6 +564,7 @@ input:checked + .slider:before {
             line-height: var(--e-global-typography-7d2bc59-line-height);
             width: 100%;
             padding: 16px !important;
+            color: var(--e-global-color-text);
         }
     }
 
