--- a/style.scss
+++ b/style.scss
@@ -820,4 +820,7 @@ input:checked + .slider:before {
     .search-summary-brief {
         color: #fff;
     }
+    .search-summary-notes {
+        color: #fff;
+    }
 }
