--- a/style.scss
+++ b/style.scss
@@ -823,4 +823,7 @@ input:checked + .slider:before {
     .search-summary-notes {
         color: #fff;
     }
+    .search-summary-filters {
+        color: #fff;
+    }
 }
