--- a/style.css
+++ b/style.css
@@ -645,4 +645,10 @@ input:checked + .slider:before {
   .influencer-search-summary.influencer-search-summary .search-summary-filters {
     color: #fff; }
 
+.pmpro_card .pmpro_content_message {
+  padding: 40px;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto; }
+
 /*# sourceMappingURL=style.css.map */
