--- a/style.scss
+++ b/style.scss
@@ -827,3 +827,12 @@ input:checked + .slider:before {
         color: #fff;
     }
 }
+
+.pmpro_card  {
+    .pmpro_content_message {
+        padding: 40px;
+        max-width: 700px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
