--- a/style.scss
+++ b/style.scss
@@ -829,7 +829,7 @@ input:checked + .slider:before {
 }
 
 .pmpro_card  {
-    .pmpro_content_message {
+    &.pmpro_content_message {
         padding: 40px;
         max-width: 700px;
         margin-left: auto;
