--- a/style.css
+++ b/style.css
@@ -646,6 +646,7 @@ input:checked + .slider:before {
     color: #fff; }
 
 .pmpro_card.pmpro_content_message {
+  margin-top: 50px;
   padding: 40px;
   max-width: 700px;
   margin-left: auto;
