--- a/style.scss
+++ b/style.scss
@@ -830,6 +830,7 @@ input:checked + .slider:before {
 
 .pmpro_card  {
     &.pmpro_content_message {
+        margin-top: 50px;
         padding: 40px;
         max-width: 700px;
         margin-left: auto;
