--- a/style.scss
+++ b/style.scss
@@ -847,3 +847,8 @@ input:checked + .slider:before {
         margin-right: auto;
     }
 }
+
+
+.dashboard-content-inner {
+    padding: 10px 50px;
+}
