--- a/style.css
+++ b/style.css
@@ -661,4 +661,7 @@ input:checked + .slider:before {
   margin-left: auto;
   margin-right: auto; }
 
+.dashboard-content-inner {
+  padding: 10px 50px; }
+
 /*# sourceMappingURL=style.css.map */
