--- a/style.scss
+++ b/style.scss
@@ -859,3 +859,7 @@ input:checked + .slider:before {
         padding: 20px 10px;
     }
 }
+
+.pmpro_btn {
+    color: var(--e-global-color-2ba2932);
+}
