--- a/style.scss
+++ b/style.scss
@@ -860,7 +860,7 @@ input:checked + .slider:before {
     }
 }
 
-.pmpro_btn {
+.pmpro_btn.pmpro_btn.pmpro_btn {
     color: var(--e-global-color-2ba2932);
 }
 
