--- a/style.css
+++ b/style.css
@@ -673,7 +673,7 @@ input:checked + .slider:before {
     .dashboard-content-inner {
       padding: 20px 10px; } }
 
-.pmpro_btn {
+.pmpro_btn.pmpro_btn.pmpro_btn {
   color: var(--e-global-color-2ba2932); }
 
 #pmpro_levels .pmpro_section_content {
