--- a/style.scss
+++ b/style.scss
@@ -862,6 +862,9 @@ input:checked + .slider:before {
 
 .pmpro_btn.pmpro_btn.pmpro_btn {
     color: var(--e-global-color-2ba2932);
+    &:hover {
+        background-color: var( --e-global-color-accent );
+    }
 }
 
 #pmpro_levels {
