--- a/style.css
+++ b/style.css
@@ -685,7 +685,8 @@ input:checked + .slider:before {
       padding: 20px 10px; } }
 
 .pmpro_btn.pmpro_btn.pmpro_btn {
-  color: var(--e-global-color-2ba2932); }
+  color: var(--e-global-color-2ba2932);
+  border: none !important; }
 
 #pmpro_levels .pmpro_section_content {
   --pmpro--base--spacing--large: 20px;
@@ -693,5 +694,11 @@ input:checked + .slider:before {
   gap: 20px; }
   #pmpro_levels .pmpro_section_content > p:first-child {
     display: none; }
+
+#pmpro_btn-submit {
+  font-size: 0; }
+  #pmpro_btn-submit:before {
+    content: 'Submit';
+    font-size: 16px; }
 
 /*# sourceMappingURL=style.css.map */
