--- a/style.css
+++ b/style.css
@@ -684,7 +684,7 @@ input:checked + .slider:before {
     .dashboard-content-inner {
       padding: 20px 10px; } }
 
-.pmpro_btn.pmpro_btn.pmpro_btn {
+.pmpro_btn.pmpro_btn.pmpro_btn:not(.pmpro_btn-cancel) {
   color: var(--e-global-color-2ba2932);
   border: none !important; }
 
