--- a/style.scss
+++ b/style.scss
@@ -886,3 +886,7 @@ input:checked + .slider:before {
         }
     }
 }
+
+.pmpro_btn-print.pmpro_btn-print {
+    color: var(--e-global-color-2ba2932);
+}
